2013-05-11  Borut Razem  <borutr@users.sourceforge.net>
  * doc/gputils.lyx: various updates

2013-05-11  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * header/Makefile.am, header/Makefile.in, header/p16f1704.inc,
    header/p16f1708.inc, header/p16lf1704.inc, header/p16lf1708.inc,
    header/p16lf1xxx.inc, lkr/Makefile.am, lkr/Makefile.in,
    lkr/16f1704_g.lkr, lkr/16f1708_g.lkr, lkr/16lf1704_g.lkr,
    lkr/16lf1708_g.lkr, libgputils/gpprocessor.c, doc/gputils.lyx:
    New MCU-s based on the mplabx-1.8.
  * header/p16f753.inc:
    Fresh based on the mplabx-1.8.
  * header/p16f1782.inc, header/p16f1783.inc, header/p16lf1782.inc,
    header/p16lf1783.inc:
    Repaired the faulty gputils's entries.

2013-05-09  Borut Razem  <borutr@users.sourceforge.net>
  * libgputils/gpmemory.c:
    fixed bug #264 gpasm 1.1.0 core dumps using mixed CONFIG __CONFIG
    word memory location is used if at least one byte is used
  * include/stdhdr.h: updated copyright year
  * gpasm/directive.c:
    fixed default access RAM argument for 16bit extended instructions
  * gpasm/directive.c, gpasm/coff.c: fixed __CONFIG section generation
    for configs on odd address
  * gplink/map.c: Symbols - Sorted by Name, Symbols - Sorted by Address
  * gputils/gpvo.c, gputils/dump.c: don't exit if source file not found,
    don't crash (assert) on bed section number

2013-05-05  Borut Razem  <borutr@users.sourceforge.net>
  * man/gpasm.1.in, man/fr/gpasm.1.in, gpasm/gpasm.c, doc/gputils.lyx:
    fixed English typos, applied patch
    #265 French trenslation of gputils/man/fr/gpasm.1.in,
    thanks to Alain Portal

2013-05-04  Borut Razem  <borutr@users.sourceforge.net>
  * gpasm/gpasm.c, doc/gputils.lyx:
    reorder the usage options listing
  * man/gpasm.1.in: added missing --mpasm-compatible and -P options
  * man/fr/gpasm.1.in: added missing --mpasm-compatible and -P
    options, prepared for French translation

2013-04-29  Borut Razem  <borutr@users.sourceforge.net>