@@ -261,6 +261,8 @@ static struct px pics[] = {
   { PROC_CLASS_PIC14E   , "__16F1519"     , { "pic16f1519"     , "p16f1519"       , "16f1519"         }, 0x1519,  8,   32, 0x003FFF, 0x004000, {       -1,       -1 }, { 0x008007, 0x008008 }, "16f1519_g.lkr"     , 0 },
   { PROC_CLASS_PIC14E   , "__16F1526"     , { "pic16f1526"     , "p16f1526"       , "16f1526"         }, 0x1526,  4,   32, 0x001FFF, 0x002000, {       -1,       -1 }, { 0x008007, 0x008008 }, "16f1526_g.lkr"     , 0 },
   { PROC_CLASS_PIC14E   , "__16F1527"     , { "pic16f1527"     , "p16f1527"       , "16f1527"         }, 0x1527,  8,   32, 0x003FFF, 0x004000, {       -1,       -1 }, { 0x008007, 0x008008 }, "16f1527_g.lkr"     , 0 },
+  { PROC_CLASS_PIC14E   , "__16F1704"     , { "pic16f1704"     , "p16f1704"       , "16f1704"         }, 0x1704,  2,   32, 0x000FFF, 0x001000, {       -1,       -1 }, { 0x008007, 0x008008 }, "16f1704_g.lkr"     , 0 },
+  { PROC_CLASS_PIC14E   , "__16F1708"     , { "pic16f1708"     , "p16f1708"       , "16f1708"         }, 0x1708,  2,   32, 0x000FFF, 0x001000, {       -1,       -1 }, { 0x008007, 0x008008 }, "16f1708_g.lkr"     , 0 },
   { PROC_CLASS_PIC14E   , "__16F1782"     , { "pic16f1782"     , "p16f1782"       , "16f1782"         }, 0x1782,  1,   32, 0x00F0FF, 0x000800, { 0x000800, 0x00EFFF }, { 0x008007, 0x008008 }, "16f1782_g.lkr"     , 0 },
   { PROC_CLASS_PIC14E   , "__16F1783"     , { "pic16f1783"     , "p16f1783"       , "16f1783"         }, 0x1783,  2,   32, 0x00F0FF, 0x001000, { 0x001000, 0x00EFFF }, { 0x008007, 0x008008 }, "16f1783_g.lkr"     , 0 },
   { PROC_CLASS_PIC14E   , "__16F1784"     , { "pic16f1784"     , "p16f1784"       , "16f1784"         }, 0x1784,  2,   32, 0x00F0FF, 0x001000, { 0x001000, 0x00EFFF }, { 0x008007, 0x008008 }, "16f1784_g.lkr"     , 0 },
@@ -320,6 +322,8 @@ static struct px pics[] = {
   { PROC_CLASS_PIC14E   , "__16LF1519"    , { "pic16lf1519"    , "p16lf1519"      , "16lf1519"        }, 0xA519,  8,   32, 0x003FFF, 0x004000, {       -1,       -1 }, { 0x008007, 0x008008 }, "16lf1519_g.lkr"    , 0 },
   { PROC_CLASS_PIC14E   , "__16LF1526"    , { "pic16lf1526"    , "p16lf1526"      , "16lf1526"        }, 0xA526,  4,   32, 0x001FFF, 0x002000, {       -1,       -1 }, { 0x008007, 0x008008 }, "16lf1526_g.lkr"    , 0 },
   { PROC_CLASS_PIC14E   , "__16LF1527"    , { "pic16lf1527"    , "p16lf1527"      , "16lf1527"        }, 0xA527,  8,   32, 0x003FFF, 0x004000, {       -1,       -1 }, { 0x008007, 0x008008 }, "16lf1527_g.lkr"    , 0 },
+  { PROC_CLASS_PIC14E   , "__16LF1704"    , { "pic16lf1704"    , "p16lf1704"      , "16lf1704"        }, 0xA704,  2,   32, 0x000FFF, 0x001000, {       -1,       -1 }, { 0x008007, 0x008008 }, "16lf1704_g.lkr"    , 0 },
+  { PROC_CLASS_PIC14E   , "__16LF1708"    , { "pic16lf1708"    , "p16lf1708"      , "16lf1708"        }, 0xA708,  2,   32, 0x000FFF, 0x001000, {       -1,       -1 }, { 0x008007, 0x008008 }, "16lf1708_g.lkr"    , 0 },
   { PROC_CLASS_PIC14E   , "__16LF1782"    , { "pic16lf1782"    , "p16lf1782"      , "16lf1782"        }, 0xA782,  1,   32, 0x00F0FF, 0x000800, { 0x000800, 0x00EFFF }, { 0x008007, 0x008008 }, "16lf1782_g.lkr"    , 0 },
   { PROC_CLASS_PIC14E   , "__16LF1783"    , { "pic16lf1783"    , "p16lf1783"      , "16lf1783"        }, 0xA783,  2,   32, 0x00F0FF, 0x001000, { 0x001000, 0x00EFFF }, { 0x008007, 0x008008 }, "16lf1783_g.lkr"    , 0 },
   { PROC_CLASS_PIC14E   , "__16LF1784"    , { "pic16lf1784"    , "p16lf1784"      , "16lf1784"        }, 0xA784,  2,   32, 0x00F0FF, 0x001000, { 0x001000, 0x00EFFF }, { 0x008007, 0x008008 }, "16lf1784_g.lkr"    , 0 },
